last fixes font-size and text-align

--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ h1, h2, h3, h4, h5, h6 {
 a {
   text-decoration: none;
   color: var(--font-color1);
-  font-size: 16px;
+  font-size: 18px;
   /* font-size: 20px; */
 }
 
@@ -96,14 +96,15 @@ h1 {
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 20px;
   color: var(--font-color1);
 }
 
 p {
-  font-size: 12px;
+  font-size: 14px;
   color: var(--font-color1);
   line-height: 1.5;
+  text-align: justify;
 }
 
 nav {
@@ -116,19 +117,19 @@ nav {
   /* width: 100%;
   z-index: 10;
   background-color: var(--background-color); */
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100%;
   z-index: 10;
   background-color: var(--background-color);
   padding: 10px 20px;
   position: fixed;
   top: 0;
+  padding: 1rem 1.5rem;
 }
 
 .nav-list {
-  display: flex,;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   /* margin-right: 50px; */
 }
 
@@ -141,7 +142,7 @@ nav {
 }
 
 .welcome-text {
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   /* padding-right: 400px; */
 }
 
@@ -150,7 +151,7 @@ nav {
   font-size: 18px;
   border: var(--accent-color) 4px solid;
   background-color: var(--background-color);
-  margin-top: 20px;
+  margin-top: 1.5rem;
   border-radius: 5px;
 }
 
@@ -177,13 +178,13 @@ li {
   /* margin-left: 200;
   margin-right: 200; */
   max-width: 100vw;
-  padding: 0 1rem 0 1rem;
+  padding: 0 1.5rem 0 1.5rem;
 
 }
 
 #projects {
   text-align: center;
-  padding: 0 1rem 0 1rem;
+  padding: 0 1.5rem 0 1.5rem;
   /* padding: 10rem 2rem; */
 }
 
@@ -252,7 +253,7 @@ img {
 }
 
 .project-title {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   /* padding: 1rem 0; */
 }
 
@@ -277,7 +278,7 @@ img {
   justify-content: center;
   align-items: flex-start;
   /* align-items: center; */
-  padding: 0 1rem 0 1rem;
+  padding: 0 1.5rem 0 1.5rem;
 }
 
 .about-content {
@@ -291,6 +292,9 @@ img {
   gap: 3rem;*/
 }
 
+.about-header {
+  margin-bottom: 2rem;
+}
 .about-image {
   width: 150px;
   border-radius: 50%;
@@ -304,7 +308,7 @@ img {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0 1rem 0 1rem;
+  padding: 0 1.5rem 0 1.5rem;
 }
 
 .contact-title {
